force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/HR_Mandatory_Training_Tracking__c.object-meta.xml
<CustomObject>
    <description>HR object: to track progress of mandatory training for DIR employees</description>
    <label>HR Mandatory Training Tracking</label>
    <nameField>
        <displayFormat>MTT-{0000}</displayFormat>
        <label>Mandatory Training Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR Mandatory Training Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>