force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <description>Master Detail relationship with Appointment</description>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipName>Mandatory_Training_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>