force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/fields/CalHR_Basic_Sup_Part_I_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>CalHR_Basic_Sup_Part_I_Complete_Date__c</fullName>
    <description>Date CalHR training segment 1 complete date</description>
    <label>CalHR Basic Sup Part I Complete Date</label>
    <type>Date</type>
</CustomField>