force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/fields/CPS_Basic_Sup_Part_II_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>CPS_Basic_Sup_Part_II_Complete_Date__c</fullName>
    <label>CPS Basic Sup Part II Complete Date</label>
    <type>Date</type>
</CustomField>