force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due date for training, to be updated with RollUp summary + training frequency.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>