force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/fields/Due_Date_for_new_Training_Alert_Email__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_for_new_Training_Alert_Email__c</fullName>
    <description>Indicates Due Date for new Training Alert Email based on RT, is updated by wfr</description>
    <label>Due Date for new Training Alert Email</label>
    <length>30</length>
    <type>Text</type>
</CustomField>