force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>To be updated with employee&#39;s email from Appointment object</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>