force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>Name of DIR employee from appointment&#39;s contact</description>
    <label>Employee Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>