force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/fields/Position_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>Position_Class_Code__c</fullName>
    <description>This field is to be updated with Position&#39;s Class Title CodeNo</description>
    <label>Position Class Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>