force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/fields/Start_Date_ODD_or_EVEN__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_ODD_or_EVEN__c</fullName>
    <description>Indicates whether start of appointment is in a odd or even year, this is to help create Ethnics training record which schedules to occur every odd year. This field will be updated by a workflow rule</description>
    <label>Start Date ODD or EVEN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>