force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/fields/Training_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Complete_Date__c</fullName>
    <description>Date training complete</description>
    <label>Training Complete Date</label>
    <type>Date</type>
</CustomField>