force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/recordTypes/Basic_Supervision.recordType-meta.xml
<RecordType>
    <fullName>Basic_Supervision</fullName>
    <active>true</active>
    <description>Basic Supervisory Training</description>
    <label>Basic Supervision</label>
</RecordType>