force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/recordTypes/CEA_Leadership_Training_Initial_Appointment.recordType-meta.xml
<RecordType>
    <fullName>CEA_Leadership_Training_Initial_Appointment</fullName>
    <active>true</active>
    <description>Per GC 19995.4 (e), 20 hours of leadership training must be completed within 12 months of appointment</description>
    <label>CEA Leadership Training</label>
</RecordType>