force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/recordTypes/EEO_Laws_and_Discrimination_Prevention_Supervisor_Supplement.recordType-meta.xml
<RecordType>
    <fullName>EEO_Laws_and_Discrimination_Prevention_Supervisor_Supplement</fullName>
    <active>true</active>
    <description>EEO Laws and Discrimination Prevention Supervisor Supplement training</description>
    <label>EEO Laws and Discrimination Prevention Supervisor Supplement</label>
</RecordType>