force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/recordTypes/Ethics.recordType-meta.xml
<RecordType>
    <fullName>Ethics</fullName>
    <active>true</active>
    <description>Ethics Training</description>
    <label>Ethics</label>
</RecordType>