force-app/main/default/objects/HR_Mandatory_Training_Tracking__c/recordTypes/Manager_Leadership_Initial_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Manager_Leadership_Initial_Appointment</fullName>
    <active>true</active>
    <description>Per GC 19995.4 (d), 40 hours of leadership training must be completed within 12 months of appointment</description>
    <label>Manager Leadership</label>
</RecordType>